NS-32 Fix truncated -Send Message- button text

--- a/custom/themes/ns_custom/css/custom.css
+++ b/custom/themes/ns_custom/css/custom.css
@@ -287,6 +287,11 @@ div.description.help-block,
   display: none;
 }
 
+form.contact-message-feedback-form.contact-message-form.contact-form
+#edit-submit {
+  width: auto !important;
+}
+
 #edit-submit {
     width: 90px;
 }
